--- a/index.html
+++ b/index.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css.css">
-</head>
-<body>
-    <h3 class="head">Our Menu</h3>
-    <div class="main">
-        <div class="sub"><div class="divs"><span class="menu1">Chicken</span></div> Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores dolores, necessitatibus nostrum offic iis consequatur Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores dolores, necessitatibus nostrum offic iis consequatur</div>
-        <div class="sub"><div class="divs"><span class="menu2">Beef</span></div> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam, quo. Dolores odit consequuntur Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores dolores, necessitatibus nostrum offic iis consequatur</div>
-        <div class="sub"><div class="divs"><span class="menu3">Sushi</span></div> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut non hic adipisci consequuntur Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores dolores, necessitatibus nostrum offic iis consequatur</div>
-    </div>
-</body>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css" integrity="sha512-OQDNdI5rpnZ0BRhhJc+btbbtnxaj+LdQFeh0V9/igiEPDiWE2fG+ZsXl0JEH+bjXKPJ3zcXqNyP4/F/NegVdZg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css" />
+   
+  </head>
+  <body>
+  
+   <div class="scrollable-tabs-container">
+    <div class="left-arrow"><i class="ri-arrow-left-s-line"></i></div>
+    <div class="right-arrow"><i class="ri-arrow-right-s-line"></i></div>
+      <ul>
+        <li><a href="#">HTML</a></li>
+        <li><a href="#">CSS</a></li>
+        <li><a href="#">Javscript</a></li>
+        <li><a href="#">ReactJs</a></li>
+        <li><a href="#">NodeJs</a></li>
+        <li><a href="#">Java</a></li>
+        <li><a href="#">Springboot</a></li>
+        <li><a href="#">Mysql</a></li>
+        <li><a href="#">MongoDb</a></li>
+        <li><a href="#">Python</a></li>
+        <li><a href="#">C++</a></li>
+        <li><a href="#">C#</a></li>
+        <li><a href="#">Ruby</a></li>
+        <li><a href="#">XML</a></li>
+      </ul>
+      
+   </div>
+
+    <script src="script.js"></script>
+  </body>
 </html>
